@@ -1,3 +1,9 @@
+2015-08-21  François  <francois@dechelle.net>
+
+	* added new configuration file parser using Glib scanner; tests ok
+
+	* finished implementation of structure for modules
+
 2015-08-20  François  <francois@dechelle.net>
 
 	* implementation of structure for modules almost complete; compiles ok
